# InfoWidgets

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
cmake/: Version.h.in
include/: AttackSpeedWidget.h  BaseTextWidget.h  ColorConfig.h  D3DRenderer.h  DrawUtils.h  FlatRegenCache.h  FoodWidget.h  GeneralConfig.h  HealthRegenWidget.h  LightWidget.h  MagickaRegenWidget.h  MovementSpeedWidget.h  NoiseWidget.h  PCH.h  PluginHUD.h  ResistWidget.h  SKSEMenuFramework.h  StaminaRegenWidget.h  ToxicityWidget.h  VampireStageWidget.h  Version.h  Widget.h
src/: AttackSpeedWidget.cpp  BaseTextWidget.cpp  ColorConfig.cpp  D3DRenderer.cpp  DrawUtils.cpp  FlatRegenCache.cpp  FoodWidget.cpp  GeneralConfig.cpp  HealthRegenWidget.cpp  LightWidget.cpp  MagickaRegenWidget.cpp  MovementSpeedWidget.cpp  NoiseWidget.cpp  PluginHUD.cpp  ResistWidget.cpp  StaminaRegenWidget.cpp  ToxicityWidget.cpp  VampireStageWidget.cpp  main.cpp
